text model training + evaluation with chosen hyperparameters

--- a/text-model-evaluation.ipynb
+++ b/text-model-evaluation.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -98,11 +98,6 @@
     }
    ],
    "source": [
-    "# Set hyperparameters\n",
-    "batch_size = 64\n",
-    "dropout_prob = 0\n",
-    "\n",
-    "\n",
     "# Load the data from the JSON files\n",
     "with open('data/F_data.json') as file:\n",
     "    F_data = json.load(file)\n",
@@ -124,9 +119,9 @@
     "mixed_dataset = SarcasmDataset(mixed_data)\n",
     "\n",
     "# Create dataloaders\n",
-    "F_dataloader = DataLoader(F_dataset, batch_size, shuffle=True)\n",
-    "M_dataloader = DataLoader(M_dataset, batch_size, shuffle=True)\n",
-    "mixed_dataloader = DataLoader(mixed_dataset, batch_size, shuffle=True)\n",
+    "F_dataloader = DataLoader(F_dataset, batch_size = 8)\n",
+    "M_dataloader = DataLoader(M_dataset, batch_size = 64)\n",
+    "mixed_dataloader = DataLoader(mixed_dataset, batch_size = 32)\n",
     "\n",
     "\n",
     "\n",
@@ -134,6 +129,8 @@
     "device = torch.device(\"cpu\")\n",
     "\n",
     "# Mixed model\n",
+    "dropout_prob = 0.1\n",
+    "\n",
     "mixed_model = BertForSequenceClassification.from_pretrained(\n",
     "    \"prajjwal1/bert-tiny\",\n",
     "    num_labels=2,\n",
@@ -151,13 +148,15 @@
     "    )\n",
     "\n",
     "# Load the weights\n",
-    "state_dict = torch.load(\"models/mixed_model_enriched_text.pth\")\n",
+    "state_dict = torch.load(\"models/mixed_model_text.pth\")\n",
     "mixed_model.load_state_dict(state_dict)\n",
     "\n",
     "mixed_model.eval()\n",
     "mixed_model.to(device)\n",
     "\n",
     "# F model\n",
+    "dropout_prob = 0\n",
+    "\n",
     "F_model = BertForSequenceClassification.from_pretrained(\n",
     "    \"prajjwal1/bert-tiny\",\n",
     "    num_labels=2,\n",
@@ -182,6 +181,8 @@
     "F_model.to(device)\n",
     "\n",
     "# M model\n",
+    "dropout_prob = 0.1\n",
+    "\n",
     "M_model = BertForSequenceClassification.from_pretrained(\n",
     "    \"prajjwal1/bert-tiny\",\n",
     "    num_labels=2,\n",
@@ -214,21 +215,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:00<00:00, 22.21it/s]"
+      "100%|██████████| 26/26 [00:00<00:00, 58.42it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval Loss: 0.6555,  ACC: 0.6733, F1-weighted: 0.6524\n"
+      "eval Loss: 0.6011,  ACC: 0.7083, F1-weighted: 0.5768\n"
      ]
     },
     {
@@ -254,21 +255,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:00<00:00, 17.64it/s]"
+      "100%|██████████| 7/7 [00:00<00:00, 14.95it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval Loss: 0.4879,  ACC: 0.8158, F1-weighted: 0.8133\n"
+      "eval Loss: 0.6545,  ACC: 0.6396, F1-weighted: 0.5841\n"
      ]
     },
     {
@@ -294,21 +295,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:00<00:00, 16.69it/s]"
+      "100%|██████████| 7/7 [00:00<00:00, 13.54it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval Loss: 0.6879,  ACC: 0.5487, F1-weighted: 0.5296\n"
+      "eval Loss: 0.6803,  ACC: 0.5579, F1-weighted: 0.4658\n"
      ]
     },
     {
@@ -334,21 +335,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:00<00:00, 15.92it/s]"
+      "100%|██████████| 27/27 [00:01<00:00, 24.42it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval Loss: 0.6884,  ACC: 0.5446, F1-weighted: 0.5322\n"
+      "eval Loss: 0.6754,  ACC: 0.5703, F1-weighted: 0.4831\n"
      ]
     },
     {
@@ -374,21 +375,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:00<00:00, 17.55it/s]"
+      "100%|██████████| 26/26 [00:00<00:00, 65.52it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval Loss: 0.6555,  ACC: 0.6733, F1-weighted: 0.6524\n"
+      "eval Loss: 0.6912,  ACC: 0.5144, F1-weighted: 0.4582\n"
      ]
     },
     {
@@ -414,21 +415,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:00<00:00, 17.67it/s]"
+      "100%|██████████| 27/27 [00:01<00:00, 25.41it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval Loss: 0.4842,  ACC: 0.8192, F1-weighted: 0.8172\n"
+      "eval Loss: 0.6855,  ACC: 0.5422, F1-weighted: 0.4777\n"
      ]
     },
     {
@@ -454,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
