--- a/text-model-training.ipynb
+++ b/text-model-training.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we have to load the datasets, which have already been prepared in `data_labelling_json.ipynb`. The different datasets are:\n",
+    "First we have to load the datasets, which have already been prepared in `text-data-preparation.ipynb`. The different datasets are:\n",
     "- mixed_data_enriched: all utterances for which the speaker gender has been identified, augmented in order to be balanced.\n",
     "- F_data: all utterances in which the speaker is a woman.\n",
     "- M_data_enriched: all utterances in which the speaker is a man, augmented in order to be balanced."
@@ -190,7 +190,7 @@
     "test_size = len(dataset) - train_size  # 20% of the data for testing\n",
     "train_dataset, test_dataset = random_split(dataset, [train_size, test_size])\n",
     "\n",
-    "# Initialize the dataLoaders\n",
+    "# Initialize the DataLoaders\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=batch_size)\n",
     "test_dataloader = DataLoader(test_dataset, batch_size=batch_size)\n",
     "\n",
@@ -213,7 +213,7 @@
     "\n",
     "mixed_model_enriched.to(device)\n",
     "\n",
-    "# Define optimizer and criterion\n",
+    "# Define optimizer and loss criterion\n",
     "optimizer = AdamW(mixed_model_enriched.parameters(), lr=learning_rate, weight_decay=weight_decay)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
@@ -311,7 +311,7 @@
     "test_size = len(dataset) - train_size  # 20% of the data for testing\n",
     "train_dataset, test_dataset = random_split(dataset, [train_size, test_size])\n",
     "\n",
-    "# Initialize the dataLoaders\n",
+    "# Initialize the DataLoaders\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=batch_size)\n",
     "test_dataloader = DataLoader(test_dataset, batch_size=batch_size)\n",
     "\n",
@@ -334,7 +334,7 @@
     "\n",
     "F_model.to(device)\n",
     "\n",
-    "# Define optimizer and criterion\n",
+    "# Define optimizer and loss criterion\n",
     "optimizer = AdamW(F_model.parameters(), lr=learning_rate, weight_decay=weight_decay)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
@@ -432,7 +432,7 @@
     "test_size = len(dataset) - train_size  # 20% of the data for testing\n",
     "train_dataset, test_dataset = random_split(dataset, [train_size, test_size])\n",
     "\n",
-    "# Initialize the dataLoaders\n",
+    "# Initialize the DataLoaders\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=batch_size)\n",
     "test_dataloader = DataLoader(test_dataset, batch_size=batch_size)\n",
     "\n",
@@ -455,7 +455,7 @@
     "\n",
     "M_model_enriched.to(device)\n",
     "\n",
-    "# Define optimizer and criterion\n",
+    "# Define optimizer and loss criterion\n",
     "optimizer = AdamW(M_model_enriched.parameters(), lr=learning_rate, weight_decay=weight_decay)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
