balanced train, val, test splitting

--- a/text-data-preparation.ipynb
+++ b/text-data-preparation.ipynb
@@ -22,7 +22,9 @@
     "from nltk.corpus import wordnet\n",
     "import spacy\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
-    "import random"
+    "import random\n",
+    "from torch.utils.data import random_split\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +328,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\celin\\AppData\\Local\\Temp\\ipykernel_19628\\3008740719.py:33: UserWarning: [W007] The model you're using has no word vectors loaded, so the result of the Doc.similarity method will be based on the tagger, parser and NER, which may not give useful similarity judgements. This may happen if you're using one of the small models, e.g. `en_core_web_sm`, which don't ship with word vectors and only use context-sensitive tensors. You can always add your own word vectors, or use one of the larger models instead if available.\n",
+      "C:\\Users\\celin\\AppData\\Local\\Temp\\ipykernel_19184\\3008740719.py:33: UserWarning: [W007] The model you're using has no word vectors loaded, so the result of the Doc.similarity method will be based on the tagger, parser and NER, which may not give useful similarity judgements. This may happen if you're using one of the small models, e.g. `en_core_web_sm`, which don't ship with word vectors and only use context-sensitive tensors. You can always add your own word vectors, or use one of the larger models instead if available.\n",
       "  similarity = word_nlp.similarity(synonym_nlp)\n"
      ]
     }
@@ -395,14 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\celin\\AppData\\Local\\Temp\\ipykernel_19628\\3008740719.py:33: UserWarning: [W007] The model you're using has no word vectors loaded, so the result of the Doc.similarity method will be based on the tagger, parser and NER, which may not give useful similarity judgements. This may happen if you're using one of the small models, e.g. `en_core_web_sm`, which don't ship with word vectors and only use context-sensitive tensors. You can always add your own word vectors, or use one of the larger models instead if available.\n",
+      "C:\\Users\\celin\\AppData\\Local\\Temp\\ipykernel_19184\\3008740719.py:33: UserWarning: [W007] The model you're using has no word vectors loaded, so the result of the Doc.similarity method will be based on the tagger, parser and NER, which may not give useful similarity judgements. This may happen if you're using one of the small models, e.g. `en_core_web_sm`, which don't ship with word vectors and only use context-sensitive tensors. You can always add your own word vectors, or use one of the larger models instead if available.\n",
       "  similarity = word_nlp.similarity(synonym_nlp)\n"
      ]
     }
@@ -449,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -486,8 +488,143 @@
     "\n",
     "For female data, we can keep using the non-augmented dataset.\n",
     "\n",
-    "Our data is now ready for training."
+    "For training, we will split each dataset into 3 subsets: training, validation, and testing. To make sure that these three subsets are also balanced, we will define them here."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Making sure the training, validation and test datasets are also balanced.\n",
+    "\n",
+    "# Mixed\n",
+    "female_sarcastic_utterances = [(key, value) for key, value in mixed_combined_data.items() if value['gender'] == 'F' and value['sarcasm']]\n",
+    "female_non_sarcastic_utterances = [(key, value) for key, value in mixed_combined_data.items() if value['gender'] == 'F' and not value['sarcasm']]\n",
+    "male_sarcastic_utterances = [(key, value) for key, value in mixed_combined_data.items() if value['gender'] == 'M' and value['sarcasm']]\n",
+    "male_non_sarcastic_utterances = [(key, value) for key, value in mixed_combined_data.items() if value['gender'] == 'M' and not value['sarcasm']]\n",
+    "\n",
+    "train_size = int(0.7 * len(female_sarcastic_utterances))\n",
+    "val_size = int(0.15 * len(female_sarcastic_utterances))\n",
+    "test_size = len(female_sarcastic_utterances) - train_size - val_size\n",
+    "\n",
+    "FS_train, FS_test_val = train_test_split(female_sarcastic_utterances, test_size = 0.3)\n",
+    "FS_test, FS_val = train_test_split(FS_test_val, test_size = 0.5)\n",
+    "\n",
+    "train_size = int(0.7 * len(female_non_sarcastic_utterances))\n",
+    "val_size = int(0.15 * len(female_non_sarcastic_utterances))\n",
+    "test_size = len(female_non_sarcastic_utterances) - train_size - val_size\n",
+    "\n",
+    "FnS_train, FnS_test_val = train_test_split(female_non_sarcastic_utterances, test_size = 0.3)\n",
+    "FnS_test, FnS_val = train_test_split(FnS_test_val, test_size = 0.5)\n",
+    "\n",
+    "train_size = int(0.7 * len(male_sarcastic_utterances))\n",
+    "val_size = int(0.15 * len(male_sarcastic_utterances))\n",
+    "test_size = len(male_sarcastic_utterances) - train_size - val_size\n",
+    "\n",
+    "MS_train, MS_test_val = train_test_split(male_sarcastic_utterances, test_size = 0.3)\n",
+    "MS_test, MS_val = train_test_split(MS_test_val, test_size = 0.5)\n",
+    "\n",
+    "train_size = int(0.7 * len(male_non_sarcastic_utterances))\n",
+    "val_size = int(0.15 * len(male_non_sarcastic_utterances))\n",
+    "test_size = len(male_non_sarcastic_utterances) - train_size - val_size\n",
+    "\n",
+    "MnS_train, MnS_test_val = train_test_split(male_non_sarcastic_utterances, test_size = 0.3)\n",
+    "MnS_test, MnS_val = train_test_split(MnS_test_val, test_size = 0.5)\n",
+    "\n",
+    "train_set_mixed = dict(FS_train + FnS_train + MS_train + MnS_train)\n",
+    "val_set_mixed = dict(FS_val + FnS_val + MS_val + MnS_val)\n",
+    "test_set_mixed =  dict(FS_test + FnS_test + MS_test + MnS_test)\n",
+    "\n",
+    "\n",
+    "# Male\n",
+    "M_sarcastic_utterances = [(key, value) for key, value in M_combined_data.items() if value['gender'] == 'M' and value['sarcasm']]\n",
+    "M_non_sarcastic_utterances = [(key, value) for key, value in M_combined_data.items() if value['gender'] == 'M' and not value['sarcasm']]\n",
+    "\n",
+    "train_size = int(0.7 * len(M_sarcastic_utterances))\n",
+    "val_size = int(0.15 * len(M_sarcastic_utterances))\n",
+    "test_size = len(M_sarcastic_utterances) - train_size - val_size\n",
+    "\n",
+    "MS_train, MS_test_val = train_test_split(M_sarcastic_utterances, test_size = 0.3)\n",
+    "MS_test, MS_val = train_test_split(MS_test_val, test_size = 0.5)\n",
+    "\n",
+    "train_size = int(0.7 * len(M_non_sarcastic_utterances))\n",
+    "val_size = int(0.15 * len(M_non_sarcastic_utterances))\n",
+    "test_size = len(M_non_sarcastic_utterances) - train_size - val_size\n",
+    "\n",
+    "MnS_train, MnS_test_val = train_test_split(M_non_sarcastic_utterances, test_size = 0.3)\n",
+    "MnS_test, MnS_val = train_test_split(MnS_test_val, test_size = 0.5)\n",
+    "\n",
+    "train_set_M = dict(MS_train + MnS_train)\n",
+    "val_set_M = dict(MS_val + MnS_val)\n",
+    "test_set_M = dict(MS_test + MnS_test)\n",
+    "\n",
+    "\n",
+    "# Female\n",
+    "F_sarcastic_utterances = [(key, value) for key, value in F_data.items() if value['gender'] == 'F' and value['sarcasm']]\n",
+    "F_non_sarcastic_utterances = [(key, value) for key, value in F_data.items() if value['gender'] == 'F' and not value['sarcasm']]\n",
+    "\n",
+    "train_size = int(0.7 * len(F_sarcastic_utterances))\n",
+    "val_size = int(0.15 * len(F_sarcastic_utterances))\n",
+    "test_size = len(F_sarcastic_utterances) - train_size - val_size\n",
+    "\n",
+    "FS_train, FS_test_val = train_test_split(F_sarcastic_utterances, test_size = 0.3)\n",
+    "FS_test, FS_val = train_test_split(FS_test_val, test_size = 0.5)\n",
+    "\n",
+    "train_size = int(0.7 * len(F_non_sarcastic_utterances))\n",
+    "val_size = int(0.15 * len(F_non_sarcastic_utterances))\n",
+    "test_size = len(F_non_sarcastic_utterances) - train_size - val_size\n",
+    "\n",
+    "FnS_train, FnS_test_val = train_test_split(F_non_sarcastic_utterances, test_size = 0.3)\n",
+    "FnS_test, FnS_val = train_test_split(FnS_test_val, test_size = 0.5)\n",
+    "\n",
+    "train_set_F = dict(FS_train + FnS_train)\n",
+    "val_set_F = dict(FS_val + FnS_val)\n",
+    "test_set_F = dict(FS_test + FnS_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save subsets as JSON files to be used in training\n",
+    "with open('data/mixed_train_set.json', 'w') as f:\n",
+    "    json.dump(train_set_mixed, f, indent=4)\n",
+    "\n",
+    "with open('data/mixed_val_set.json', 'w') as f:\n",
+    "    json.dump(val_set_mixed, f, indent=4)\n",
+    "\n",
+    "with open('data/mixed_test_set.json', 'w') as f:\n",
+    "    json.dump(test_set_mixed, f, indent=4)\n",
+    "\n",
+    "with open('data/M_train_set.json', 'w') as f:\n",
+    "    json.dump(train_set_M, f, indent=4)\n",
+    "\n",
+    "with open('data/M_val_set.json', 'w') as f:\n",
+    "    json.dump(val_set_M, f, indent=4)\n",
+    "\n",
+    "with open('data/M_test_set.json', 'w') as f:\n",
+    "    json.dump(test_set_M, f, indent=4)\n",
+    "\n",
+    "with open('data/F_train_set.json', 'w') as f:\n",
+    "    json.dump(train_set_F, f, indent=4)\n",
+    "\n",
+    "with open('data/F_val_set.json', 'w') as f:\n",
+    "    json.dump(val_set_F, f, indent=4)\n",
+    "\n",
+    "with open('data/F_test_set.json', 'w') as f:\n",
+    "    json.dump(test_set_F, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
