audio model embeddings working model, audio data preparation for both spectrograms updated and added for embed, functions audio model updated

--- a/audio-data-preparation_spectrogram.ipynb
+++ b/audio-data-preparation_spectrogram.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Audio Data Preparation for the Spectrograms, Data Balancing and Augmentation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
