--- a/text-data-preparation.ipynb
+++ b/text-data-preparation.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,14 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\celin\\AppData\\Local\\Temp\\ipykernel_19184\\3008740719.py:33: UserWarning: [W007] The model you're using has no word vectors loaded, so the result of the Doc.similarity method will be based on the tagger, parser and NER, which may not give useful similarity judgements. This may happen if you're using one of the small models, e.g. `en_core_web_sm`, which don't ship with word vectors and only use context-sensitive tensors. You can always add your own word vectors, or use one of the larger models instead if available.\n",
+      "C:\\Users\\celin\\AppData\\Local\\Temp\\ipykernel_17444\\3008740719.py:33: UserWarning: [W007] The model you're using has no word vectors loaded, so the result of the Doc.similarity method will be based on the tagger, parser and NER, which may not give useful similarity judgements. This may happen if you're using one of the small models, e.g. `en_core_web_sm`, which don't ship with word vectors and only use context-sensitive tensors. You can always add your own word vectors, or use one of the larger models instead if available.\n",
       "  similarity = word_nlp.similarity(synonym_nlp)\n"
      ]
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -397,14 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\celin\\AppData\\Local\\Temp\\ipykernel_19184\\3008740719.py:33: UserWarning: [W007] The model you're using has no word vectors loaded, so the result of the Doc.similarity method will be based on the tagger, parser and NER, which may not give useful similarity judgements. This may happen if you're using one of the small models, e.g. `en_core_web_sm`, which don't ship with word vectors and only use context-sensitive tensors. You can always add your own word vectors, or use one of the larger models instead if available.\n",
+      "C:\\Users\\celin\\AppData\\Local\\Temp\\ipykernel_17444\\3008740719.py:33: UserWarning: [W007] The model you're using has no word vectors loaded, so the result of the Doc.similarity method will be based on the tagger, parser and NER, which may not give useful similarity judgements. This may happen if you're using one of the small models, e.g. `en_core_web_sm`, which don't ship with word vectors and only use context-sensitive tensors. You can always add your own word vectors, or use one of the larger models instead if available.\n",
       "  similarity = word_nlp.similarity(synonym_nlp)\n"
      ]
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -493,9 +493,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mixed dataset: 142 158 156 144\n"
+     ]
+    }
+   ],
    "source": [
     "# Making sure the training, validation and test datasets are also balanced.\n",
     "\n",
@@ -537,6 +545,7 @@
     "val_set_mixed = dict(FS_val + FnS_val + MS_val + MnS_val)\n",
     "test_set_mixed =  dict(FS_test + FnS_test + MS_test + MnS_test)\n",
     "\n",
+    "print(\"Mixed dataset:\", len(FS_train), len(FnS_train), len(MS_train), len(MnS_train))\n",
     "\n",
     "# Male\n",
     "M_sarcastic_utterances = [(key, value) for key, value in M_combined_data.items() if value['gender'] == 'M' and value['sarcasm']]\n",
@@ -586,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,6 +627,177 @@
     "with open('data/F_test_set.json', 'w') as f:\n",
     "    json.dump(test_set_F, f, indent=4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's check the size of the different datasets: \n",
+      "Mixed data total 860\n",
+      "Mixed train 600\n",
+      "Mixed val 130\n",
+      "Mixed test 130\n",
+      "\n",
+      "M data total 448\n",
+      "M train 312\n",
+      "M val 68\n",
+      "M test 68\n",
+      "\n",
+      "F data total 203\n",
+      "F train 141\n",
+      "F val 32\n",
+      "F test 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Let's check the size of the different datasets: \")\n",
+    "\n",
+    "print(\"Mixed data total\", len(mixed_combined_data))\n",
+    "print(\"Mixed train\", len(train_set_mixed))\n",
+    "print(\"Mixed val\", len(val_set_mixed))\n",
+    "print(\"Mixed test\", len(test_set_mixed))\n",
+    "\n",
+    "print(\"\")\n",
+    "print(\"M data total\", len(M_combined_data))\n",
+    "print(\"M train\", len(train_set_M))\n",
+    "print(\"M val\", len(val_set_M))\n",
+    "print(\"M test\", len(test_set_M))\n",
+    "\n",
+    "print(\"\")\n",
+    "print(\"F data total\", len(F_data))\n",
+    "print(\"F train\", len(train_set_F))\n",
+    "print(\"F val\", len(val_set_F))\n",
+    "print(\"F test\", len(test_set_F))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking label balance within the different datasets:\n",
+      "The mixed training dataset is NOT balanced\n",
+      "mixed train - sarcastic utterances: 298\n",
+      "mixed train - non sarcastic utterances: 302\n",
+      "The mixed testing dataset is balanced\n",
+      "The mixed validation dataset is balanced\n",
+      "\n",
+      "The male training dataset is balanced\n",
+      "The male testing dataset is balanced\n",
+      "The male validation dataset is balanced\n",
+      "\n",
+      "The female training dataset is NOT balanced\n",
+      "female train - sarcastic utterances: 71\n",
+      "female train - non sarcastic utterances: 70\n",
+      "The female testing dataset is balanced\n",
+      "The female validation dataset is balanced\n",
+      "\n",
+      "The mixed training dataset is balanced by gender\n",
+      "The mixed testing dataset is balanced by gender\n",
+      "The mixed training dataset is balanced by gender\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking if the datasets are balanced\n",
+    "print('Checking label balance within the different datasets:')\n",
+    "if len([(key, value) for key, value in test_set_mixed.items() if value['sarcasm']]) == len([(key, value) for key, value in train_set_mixed.items() if not value['sarcasm']]):\n",
+    "    print('The mixed training dataset is balanced')\n",
+    "else:\n",
+    "    print('The mixed training dataset is NOT balanced')\n",
+    "    print('mixed train - sarcastic utterances:', len([(key, value) for key, value in train_set_mixed.items() if value['sarcasm']]))\n",
+    "    print('mixed train - non sarcastic utterances:', len([(key, value) for key, value in train_set_mixed.items() if not value['sarcasm']]))\n",
+    "\n",
+    "n_sarcastic_utterances = len([(key, value) for key, value in test_set_mixed.items() if value['sarcasm']])\n",
+    "n_non_sarcastic_utterances = len([(key, value) for key, value in test_set_mixed.items() if not value['sarcasm']])\n",
+    "if n_sarcastic_utterances == n_non_sarcastic_utterances:\n",
+    "    print('The mixed testing dataset is balanced')\n",
+    "\n",
+    "n_sarcastic_utterances = len([(key, value) for key, value in val_set_mixed.items() if value['sarcasm']])\n",
+    "n_non_sarcastic_utterances = len([(key, value) for key, value in val_set_mixed.items() if not value['sarcasm']])\n",
+    "if n_sarcastic_utterances == n_non_sarcastic_utterances:\n",
+    "    print('The mixed validation dataset is balanced')\n",
+    "\n",
+    "\n",
+    "print(\"\")\n",
+    "\n",
+    "M_n_sarcastic_utterances = len([(key, value) for key, value in train_set_M.items() if value['sarcasm']])\n",
+    "M_n_non_sarcastic_utterances = len([(key, value) for key, value in train_set_M.items() if not value['sarcasm']])\n",
+    "if M_n_sarcastic_utterances == M_n_non_sarcastic_utterances:\n",
+    "    print('The male training dataset is balanced')\n",
+    "\n",
+    "M_n_sarcastic_utterances = len([(key, value) for key, value in test_set_M.items() if value['sarcasm']])\n",
+    "M_n_non_sarcastic_utterances = len([(key, value) for key, value in test_set_M.items() if not value['sarcasm']])\n",
+    "if M_n_sarcastic_utterances == M_n_non_sarcastic_utterances:\n",
+    "    print('The male testing dataset is balanced')\n",
+    "\n",
+    "M_n_sarcastic_utterances = len([(key, value) for key, value in val_set_M.items() if value['sarcasm']])\n",
+    "M_n_non_sarcastic_utterances = len([(key, value) for key, value in val_set_M.items() if not value['sarcasm']])\n",
+    "if M_n_sarcastic_utterances == M_n_non_sarcastic_utterances:\n",
+    "    print('The male validation dataset is balanced')\n",
+    "\n",
+    "\n",
+    "print(\"\")\n",
+    "\n",
+    "F_n_sarcastic_utterances = len([(key, value) for key, value in train_set_F.items() if value['sarcasm']])\n",
+    "F_n_non_sarcastic_utterances = len([(key, value) for key, value in train_set_F.items() if not value['sarcasm']])\n",
+    "if F_n_sarcastic_utterances == F_n_non_sarcastic_utterances:\n",
+    "    print('The female training dataset is balanced')\n",
+    "else:\n",
+    "    print('The female training dataset is NOT balanced')\n",
+    "    print('female train - sarcastic utterances:', F_n_sarcastic_utterances)\n",
+    "    print('female train - non sarcastic utterances:', F_n_non_sarcastic_utterances)\n",
+    "\n",
+    "F_n_sarcastic_utterances = len([(key, value) for key, value in test_set_F.items() if value['sarcasm']])\n",
+    "F_n_non_sarcastic_utterances = len([(key, value) for key, value in test_set_F.items() if not value['sarcasm']])\n",
+    "if F_n_sarcastic_utterances == F_n_non_sarcastic_utterances:\n",
+    "    print('The female testing dataset is balanced')\n",
+    "\n",
+    "F_n_sarcastic_utterances = len([(key, value) for key, value in val_set_F.items() if value['sarcasm']])\n",
+    "F_n_non_sarcastic_utterances = len([(key, value) for key, value in val_set_F.items() if not value['sarcasm']])\n",
+    "if F_n_sarcastic_utterances == F_n_non_sarcastic_utterances:\n",
+    "    print('The female validation dataset is balanced')\n",
+    "\n",
+    "\n",
+    "print(\"\")\n",
+    "\n",
+    "# Checking if the mixed dataset is balanced by gender\n",
+    "n_male_utterances = len([(key, value) for key, value in train_set_mixed.items() if value['gender'] == 'M'])\n",
+    "n_female_utterances = len([(key, value) for key, value in train_set_mixed.items() if value['gender'] == 'F'])\n",
+    "if n_male_utterances == n_female_utterances:\n",
+    "    print('The mixed training dataset is balanced by gender')\n",
+    "else:\n",
+    "    print('Checking gender balance of the filtered dataset:')\n",
+    "    print('Male utterances:', n_male_utterances)\n",
+    "    print('Female utterances:', n_female_utterances)\n",
+    "\n",
+    "n_male_utterances = len([(key, value) for key, value in test_set_mixed.items() if value['gender'] == 'M'])\n",
+    "n_female_utterances = len([(key, value) for key, value in test_set_mixed.items() if value['gender'] == 'F'])\n",
+    "if n_male_utterances == n_female_utterances:\n",
+    "    print('The mixed testing dataset is balanced by gender')\n",
+    "\n",
+    "n_male_utterances = len([(key, value) for key, value in val_set_mixed.items() if value['gender'] == 'M'])\n",
+    "n_female_utterances = len([(key, value) for key, value in val_set_mixed.items() if value['gender'] == 'F'])\n",
+    "if n_male_utterances == n_female_utterances:\n",
+    "    print('The mixed training dataset is balanced by gender')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
