final text models

--- a/text-data-preparation.ipynb
+++ b/text-data-preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -545,47 +545,60 @@
     "val_set_mixed = dict(FS_val + FnS_val + MS_val + MnS_val)\n",
     "test_set_mixed =  dict(FS_test + FnS_test + MS_test + MnS_test)\n",
     "\n",
-    "print(\"Mixed dataset:\", len(FS_train), len(FnS_train), len(MS_train), len(MnS_train))\n",
-    "\n",
+    "print(\"Mixed dataset:\", len(FS_train), len(FnS_train), len(MS_train), len(MnS_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Male\n",
     "M_sarcastic_utterances = [(key, value) for key, value in M_combined_data.items() if value['gender'] == 'M' and value['sarcasm']]\n",
     "M_non_sarcastic_utterances = [(key, value) for key, value in M_combined_data.items() if value['gender'] == 'M' and not value['sarcasm']]\n",
     "\n",
-    "train_size = int(0.7 * len(M_sarcastic_utterances))\n",
-    "val_size = int(0.15 * len(M_sarcastic_utterances))\n",
+    "train_size = int(0.8 * len(M_sarcastic_utterances))\n",
+    "val_size = int(0.1 * len(M_sarcastic_utterances))\n",
     "test_size = len(M_sarcastic_utterances) - train_size - val_size\n",
     "\n",
-    "MS_train, MS_test_val = train_test_split(M_sarcastic_utterances, test_size = 0.3)\n",
+    "MS_train, MS_test_val = train_test_split(M_sarcastic_utterances, test_size = 0.2)\n",
     "MS_test, MS_val = train_test_split(MS_test_val, test_size = 0.5)\n",
     "\n",
-    "train_size = int(0.7 * len(M_non_sarcastic_utterances))\n",
-    "val_size = int(0.15 * len(M_non_sarcastic_utterances))\n",
+    "train_size = int(0.8 * len(M_non_sarcastic_utterances))\n",
+    "val_size = int(0.1 * len(M_non_sarcastic_utterances))\n",
     "test_size = len(M_non_sarcastic_utterances) - train_size - val_size\n",
     "\n",
-    "MnS_train, MnS_test_val = train_test_split(M_non_sarcastic_utterances, test_size = 0.3)\n",
+    "MnS_train, MnS_test_val = train_test_split(M_non_sarcastic_utterances, test_size = 0.2)\n",
     "MnS_test, MnS_val = train_test_split(MnS_test_val, test_size = 0.5)\n",
     "\n",
     "train_set_M = dict(MS_train + MnS_train)\n",
     "val_set_M = dict(MS_val + MnS_val)\n",
-    "test_set_M = dict(MS_test + MnS_test)\n",
-    "\n",
-    "\n",
+    "test_set_M = dict(MS_test + MnS_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Female\n",
     "F_sarcastic_utterances = [(key, value) for key, value in F_data.items() if value['gender'] == 'F' and value['sarcasm']]\n",
     "F_non_sarcastic_utterances = [(key, value) for key, value in F_data.items() if value['gender'] == 'F' and not value['sarcasm']]\n",
     "\n",
-    "train_size = int(0.7 * len(F_sarcastic_utterances))\n",
-    "val_size = int(0.15 * len(F_sarcastic_utterances))\n",
+    "train_size = int(0.8 * len(F_sarcastic_utterances))\n",
+    "val_size = int(0.1 * len(F_sarcastic_utterances))\n",
     "test_size = len(F_sarcastic_utterances) - train_size - val_size\n",
     "\n",
-    "FS_train, FS_test_val = train_test_split(F_sarcastic_utterances, test_size = 0.3)\n",
+    "FS_train, FS_test_val = train_test_split(F_sarcastic_utterances, test_size = 0.2)\n",
     "FS_test, FS_val = train_test_split(FS_test_val, test_size = 0.5)\n",
     "\n",
-    "train_size = int(0.7 * len(F_non_sarcastic_utterances))\n",
-    "val_size = int(0.15 * len(F_non_sarcastic_utterances))\n",
+    "train_size = int(0.8 * len(F_non_sarcastic_utterances))\n",
+    "val_size = int(0.1 * len(F_non_sarcastic_utterances))\n",
     "test_size = len(F_non_sarcastic_utterances) - train_size - val_size\n",
     "\n",
-    "FnS_train, FnS_test_val = train_test_split(F_non_sarcastic_utterances, test_size = 0.3)\n",
+    "FnS_train, FnS_test_val = train_test_split(F_non_sarcastic_utterances, test_size = 0.2)\n",
     "FnS_test, FnS_val = train_test_split(FnS_test_val, test_size = 0.5)\n",
     "\n",
     "train_set_F = dict(FS_train + FnS_train)\n",
@@ -595,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,13 +631,13 @@
     "with open('data/M_test_set.json', 'w') as f:\n",
     "    json.dump(test_set_M, f, indent=4)\n",
     "\n",
-    "with open('data/F_train_set.json', 'w') as f:\n",
+    "with open('data/F_train_set_alternative.json', 'w') as f:\n",
     "    json.dump(train_set_F, f, indent=4)\n",
     "\n",
-    "with open('data/F_val_set.json', 'w') as f:\n",
+    "with open('data/F_val_set_alternative.json', 'w') as f:\n",
     "    json.dump(val_set_F, f, indent=4)\n",
     "\n",
-    "with open('data/F_test_set.json', 'w') as f:\n",
+    "with open('data/F_test_set_alternative.json', 'w') as f:\n",
     "    json.dump(test_set_F, f, indent=4)"
    ]
   },
