--- a/text-model-evaluation.ipynb
+++ b/text-model-evaluation.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
     "with open('data/F_data.json') as file:\n",
     "    F_data = json.load(file)\n",
     "\n",
-    "with open('data/M_data.json') as file:\n",
+    "with open('data/M_data_enriched.json') as file:\n",
     "    M_data = json.load(file)\n",
     "\n",
     "with open('data/mixed_data_enriched.json') as file:\n",
@@ -120,8 +120,8 @@
     "\n",
     "# Create dataloaders\n",
     "F_dataloader = DataLoader(F_dataset, batch_size = 8)\n",
-    "M_dataloader = DataLoader(M_dataset, batch_size = 64)\n",
-    "mixed_dataloader = DataLoader(mixed_dataset, batch_size = 32)\n",
+    "M_dataloader = DataLoader(M_dataset, batch_size = 32)\n",
+    "mixed_dataloader = DataLoader(mixed_dataset, batch_size = 16)\n",
     "\n",
     "\n",
     "\n",
@@ -129,7 +129,7 @@
     "device = torch.device(\"cpu\")\n",
     "\n",
     "# Mixed model\n",
-    "dropout_prob = 0.1\n",
+    "dropout_prob = 0\n",
     "\n",
     "mixed_model = BertForSequenceClassification.from_pretrained(\n",
     "    \"prajjwal1/bert-tiny\",\n",
@@ -215,21 +215,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 26/26 [00:00<00:00, 58.42it/s]"
+      "  0%|          | 0/26 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 26/26 [00:02<00:00, 10.21it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval Loss: 0.6011,  ACC: 0.7083, F1-weighted: 0.5768\n"
+      "eval Loss: 0.7117,  ACC: 0.7853, F1-weighted: 0.6772\n"
      ]
     },
     {
@@ -255,21 +262,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:00<00:00, 14.95it/s]"
+      "  0%|          | 0/14 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 14/14 [00:00<00:00, 24.16it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval Loss: 0.6545,  ACC: 0.6396, F1-weighted: 0.5841\n"
+      "eval Loss: 1.0612,  ACC: 0.6964, F1-weighted: 0.6477\n"
      ]
     },
     {
@@ -295,21 +309,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:00<00:00, 13.54it/s]"
+      "100%|██████████| 14/14 [00:00<00:00, 25.89it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval Loss: 0.6803,  ACC: 0.5579, F1-weighted: 0.4658\n"
+      "eval Loss: 0.7029,  ACC: 0.5670, F1-weighted: 0.5185\n"
      ]
     },
     {
@@ -335,21 +349,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 27/27 [00:01<00:00, 24.42it/s]"
+      "100%|██████████| 54/54 [00:01<00:00, 40.95it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval Loss: 0.6754,  ACC: 0.5703, F1-weighted: 0.4831\n"
+      "eval Loss: 0.6520,  ACC: 0.6277, F1-weighted: 0.5404\n"
      ]
     },
     {
@@ -375,21 +389,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 26/26 [00:00<00:00, 65.52it/s]"
+      "100%|██████████| 26/26 [00:00<00:00, 61.54it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval Loss: 0.6912,  ACC: 0.5144, F1-weighted: 0.4582\n"
+      "eval Loss: 0.7828,  ACC: 0.5192, F1-weighted: 0.4531\n"
      ]
     },
     {
@@ -415,21 +429,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 27/27 [00:01<00:00, 25.41it/s]"
+      "100%|██████████| 54/54 [00:01<00:00, 42.47it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval Loss: 0.6855,  ACC: 0.5422, F1-weighted: 0.4777\n"
+      "eval Loss: 0.7677,  ACC: 0.5367, F1-weighted: 0.4692\n"
      ]
     },
     {
@@ -455,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
