reorganisation final results

--- a/Final_Results_Histograms.ipynb
+++ b/Final_Results_Histograms.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
     "\n",
     "plt.legend(loc='upper right', bbox_to_anchor=(1, 1.3))\n",
     "\n",
-    "plt.savefig('data/audio/histogram_embeddings_audio.svg', format='svg', bbox_inches='tight')\n",
+    "plt.savefig('histogram_audio.svg', format='svg', bbox_inches='tight')\n",
     "\n",
     "plt.show()"
    ]
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
     "\n",
     "plt.legend(loc='upper right', bbox_to_anchor=(1, 1.3))\n",
     "\n",
-    "plt.savefig('data/audio/histogram_embeddings_text.svg', format='svg', bbox_inches='tight')\n",
+    "plt.savefig('histogram_text.svg', format='svg', bbox_inches='tight')\n",
     "\n",
     "plt.show()"
    ]
