complete clean up

--- a/Final_Results_Histograms.ipynb
+++ b/Final_Results_Histograms.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Authors**: Céline Hirsch, Sandra Frey, Sina Röllin\n",
+    "\n",
+    "**Deep Learning Project**: Inclusiveness in Sarcasm Detection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,24 +22,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Final Results for Histogram\n",
-    "Acc(Set/Model)\n",
-    "### Validation Accuracy:\n",
+    "## Final Results: Audio Model\n",
+    "Acc(Set/Model)\\\n",
+    "Validation Accuracy:\n",
     "\n",
     "### Female Dataset:\n",
-    "Acc(F/F): 0.8304\n",
-    "Acc(F/M): 0.6522\n",
+    "Acc(F/F): 0.8304\\\n",
+    "Acc(F/M): 0.6522\\\n",
     "Acc(F/mixed): 0.7520\n",
     "\n",
     "\n",
     "### Male Dataset:\n",
-    "Acc(M/F): 0.5938\n",
-    "Acc(M/M): 0.8056\n",
+    "Acc(M/F): 0.5938\\\n",
+    "Acc(M/M): 0.8056\\\n",
     "Acc(M/mixed):0.6719\n",
     "\n",
     "### Mixed Dataset:\n",
-    "Acc(mixed/F): 0.7508\n",
-    "Acc(mixed/M): 0.6782\n",
+    "Acc(mixed/F): 0.7508\\\n",
+    "Acc(mixed/M): 0.6782\\\n",
     "Acc(mixed/mixed): 0.79375"
    ]
   },
@@ -82,23 +91,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Final Results for Histogram Text\n",
-    "Acc(Set/Model)\n",
+    "# Final Results: Text Model\n",
+    "Acc(Set/Model)\\\n",
     "Validation Accuracy:\n",
     "\n",
     "## Female Dataset:\n",
-    "Acc(F/F): 0.7188\n",
-    "Acc(F/M): 0.5192\n",
+    "Acc(F/F): 0.7188\\\n",
+    "Acc(F/M): 0.5192\\\n",
     "Acc(F/mixed): 0.7853\n",
     "\n",
     "## Male Dataset:\n",
-    "Acc(M/F): 0.5670\n",
-    "Acc(M/M): 0.7240\n",
+    "Acc(M/F): 0.5670\\\n",
+    "Acc(M/M): 0.7240\\\n",
     "Acc(M/mixed): 0.6964\n",
     "\n",
     "## Mixed Dataset:\n",
-    "Acc(mixed/F): 0.6277\n",
-    "Acc(mixed/M): 0.5367\n",
+    "Acc(mixed/F): 0.6277\\\n",
+    "Acc(mixed/M): 0.5367\\\n",
     "Acc(mixed/mixed): 0.8507"
    ]
   },
