--- a/text-model-evaluation.ipynb
+++ b/text-model-evaluation.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Authors**: Céline Hirsch, Sandra Frey, Sina Röllin\n",
+    "\n",
+    "**Deep Learning Project**: Inclusiveness in Sarcasm Detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now that we have created, trained and saved the different models, we will evaluate their performance on the other datasets. Here are the different evaluations we will perform:\n",
     "- performance of mixed_model on the female dataset\n",
     "- performance of mixed_model on the male dataset\n",
