--- a/text-data-preparation.ipynb
+++ b/text-data-preparation.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Authors**: Céline Hirsch, Sandra Frey, Sina Röllin\n",
+    "\n",
+    "**Deep Learning Project**: Inclusiveness in Sarcasm Detection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
